--- a/buy.html
+++ b/buy.html
@@ -232,7 +232,7 @@ input[type="submit"] {
                         </div>
                         <div class="name-container">
                             <label>Holder</label>
-                            <input type="text" name="name-text" id="name-text" maxlength="30" placeholder="NOAH JACOB"
+                            <input type="text" name="name-text" id="name-text" maxlength="30" placeholder="Ferid Mammadli"
                             required
                             onkeypress="return (event.charCode > 64 && event.charCode < 91) || (event.charCode > 96 && event.charCode < 123) || event.key == ' '">
                         </div>
