--- a/buy.html
+++ b/buy.html
@@ -263,7 +263,7 @@ input[type="submit"] {
                             </div>
                             <div class="card-holder">
                                 <label>Holder</label>
-                                <div class="name-vl">NOAH JACOB</div>
+                                <div class="name-vl">Ferid Mammadli</div>
                             </div>
                             <div class="card-infos">
                                 <div class="exp">
